# bidir_termtree

./: Cargo.toml  README.md
examples/: tree.rs  tree_up.rs
src/: lib.rs  tests.rs
