[package]
name = "bidir_termtree"
version = "0.1.1"
description = "Visualize tree-like data on the command-line (bidirectional)"
homepage = "https://github.com/dj8yfo/bidir_termtree"
repository = "https://github.com/dj8yfo/bidir_termtree"
categories = ["command-line-interface", "visualization"]
keywords = ["cli", "tree", "dag"]
license = "MIT"
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/rust-cli/termtree/compare/{{tag_name}}...HEAD", exactly=1},
]
